--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-google-recaptcha": "^2.1.9",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
+    "jose": "^6.0.10",
     "js-cookie": "^3.0.5",
     "next": "15.2.4",
     "react": "^19.0.0",
@@ -23,6 +24,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "sass": "^1.86.3",
     "tailwind-merge": "^3.1.0"
   },
